--- a/CSSTASKS/task2.html
+++ b/CSSTASKS/task2.html
@@ -53,6 +53,7 @@ ul#ver {
     </style>
 </head>
 <body>
+    <div style="border: 1px solid black; padding: 5px;">
     <ul id="hor">
         <li><a class="active" href="https://anandmisra.github.io/ethnus-internship/">Home</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
@@ -68,7 +69,7 @@ ul#ver {
         <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)">Bootstrap</a></li>
     </ul>
-
+    </div>
 </body>
 </html>
 
