--- a/HTMLTASKS/task3.html
+++ b/HTMLTASKS/task3.html
@@ -6,6 +6,7 @@
     <title>Task 3</title>
 </head>
 <body>
+    <div style="border: 1px solid black; padding: 5px; background-color: rgb(223, 222, 222); ;">
     Click any of the following links
     <br>
     <a href="https://www.youtube.com/watch?v=3OFj6l2tQ9s&t=53s" target="_blank">Opens in New</a>
@@ -13,5 +14,6 @@
     <a href="https://www.youtube.com/watch?v=3OFj6l2tQ9s&t=53s" target="_parent">Opens in Parent</a>
     <a href="https://www.youtube.com/watch?v=3OFj6l2tQ9s&t=53s" target="_top">Opens in Body</a>
     <a href="mailto:ronak.chordia2022@vitstudent.ac.in">Send email</a>
+        </div>
 </body>
 </html>
