--- a/CSSTASKS/task3.html
+++ b/CSSTASKS/task3.html
@@ -38,6 +38,7 @@ h3{
 <body>
 
 
+<div>
 <table align="center">
   <tr>
     <th>Company</th>
@@ -86,6 +87,7 @@ h3{
   </tr>
 
 </table>
+</div>
 
 </body>
 </html>
