--- a/CSSTASKS/task4.html
+++ b/CSSTASKS/task4.html
@@ -45,16 +45,19 @@
 </head>
 <body>
 
-<div>
-  <a href="#" id="b1">Button 1</a>
-  <a href="#" id="b2">Button 2</a>
-  <a href="#" id="b3">Button 3</a>
-  <a href="#" id="b4">Button 4</a>
+<div style="border: 1px soild black; padding: 5px; margin-top: 25px; margin-left: 25px;">
+  <div>
+    <a href="#" id="b1">Button 1</a>
+    <a href="#" id="b2">Button 2</a>
+    <a href="#" id="b3">Button 3</a>
+    <a href="#" id="b4">Button 4</a>
+  </div>
+  
+  <div style="margin-left:80px;">
+    <p>Hover over the buttons in the left side navigation to open them.</p>
+  </div>
 </div>
 
-<div style="margin-left:80px;">
-  <p>Hover over the buttons in the left side navigation to open them.</p>
-</div>
    
 </body>
 </html> 
