--- a/HTMLTASKS/task2.html
+++ b/HTMLTASKS/task2.html
@@ -6,6 +6,9 @@
     <title>Task 2</title>
 </head>
 <body>
+    <div style="border: 1px solid black; padding: 10px; margin-top: 25px; margin-left: 25px;">
+
+    
     <h4>Lists can be nested (list inside list):</h4>
     <ul>
         <li>Coffee</li>
@@ -16,5 +19,6 @@
         </ul></li>
         <li>Milk</li>
     </ul>
+</div>
 </body>
 </html>
