--- a/index.html
+++ b/index.html
@@ -4,55 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETHNUS INTERNSHIP</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+        .container {
+            margin-top: 20px;
+        }
+        .section-title {
+            margin-top: 30px;
+            margin-bottom: 10px;
+            color: #343a40;
+        }
+        .footer-text {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 16px;
+            color: #343a40;
+        }
+    </style>
 </head>
-<body>  
-        <ol>
-            <li>
-                HTML TASKS 
-                <ul>
-                    <li>
-                        <a href="./HTMLTASKS/task1.html">Task 1</a>
-                    </li>
-                    <li>
-                        <a href="./HTMLTASKS/task2.html">Task 2</a>
-                    </li>
-                    <li>
-                        <a href="./HTMLTASKS/task3.html">Task 3</a>
-                    </li>
-                    <li>
-                        <a href="./HTMLTASKS/task4.html">Task 4</a>
-                    </li>
-                    <li>
-                        <a href="./HTMLTASKS/task5.html">Task 5</a>
-                    </li>
+<body>
+    <div class="container">
+        <h1 class="text-center">ETHNUS INTERNSHIP</h1>
+        <ol class="list-group">
+            <li class="list-group-item">
+                HTML TASKS
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="./HTMLTASKS/task1.html">Task 1</a></li>
+                    <li class="list-group-item"><a href="./HTMLTASKS/task2.html">Task 2</a></li>
+                    <li class="list-group-item"><a href="./HTMLTASKS/task3.html">Task 3</a></li>
+                    <li class="list-group-item"><a href="./HTMLTASKS/task4.html">Task 4</a></li>
+                    <li class="list-group-item"><a href="./HTMLTASKS/task5.html">Task 5</a></li>
                 </ul>
             </li>
-            <li>
-                CSS TASKS 
-                <ul>
-                    <li>
-                        <a href="./CSSTASKS/task1.html">Task 1</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task2.html">Task 2</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task3.html">Task 3</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task4.html">Task 4</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task5.html">Task 5</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task6.html">Task 6</a>
-                    </li>
-                    <li>
-                        <a href="./CSSTASKS/task7.html">Task 7</a>
-                    </li>
+            <li class="list-group-item">
+                CSS TASKS
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="./CSSTASKS/task1.html">Task 1</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task2.html">Task 2</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task3.html">Task 3</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task4.html">Task 4</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task5.html">Task 5</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task6.html">Task 6</a></li>
+                    <li class="list-group-item"><a href="./CSSTASKS/task7.html">Task 7</a></li>
+                </ul>
+            </li>
+            <li class="list-group-item">
+                BOOTSTRAP TASKS
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task1.html">Task 1</a></li>
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task2.html">Task 2</a></li>
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task3.html">Task 3</a></li>
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task4.html">Task 4</a></li>
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task5.html">Task 5</a></li>
+                    <li class="list-group-item"><a href="./BOOTSTRAP/task6.html">Task 6</a></li>
+                </ul>
+            </li>
+            <li class="list-group-item">
+                JAVASCRIPT TASKS
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task1.html">Task 1</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task2.html">Task 2</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task3.html">Task 3</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task4.html">Task 4</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task5.html">Task 5</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task6.html">Task 6</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task7.html">Task 7</a></li>
+                    <li class="list-group-item"><a href="./JAVASCRIPT/task8.html">Task 8</a></li>
                 </ul>
             </li>
         </ol>
+        <div class="footer-text">
+            22BCE1032 - Vit Chennai
+        </div>
+    </div>
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
