some missing changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </li>
         </ol>
         <div class="footer-text">
-            22BCE1032 - Vit Chennai
+            Done By : 22BCE1032 - Vit Chennai
         </div>
     </div>
 
